# pycoreconf

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  XPATH_API_DOCUMENTATION.md  XPATH_API_DOCUMENTATION_EN.md  XPATH_API_EXAMPLES.py  XPATH_API_EXAMPLES_EN.py  main.py  pyproject.toml  requirements.txt  setup.cfg  test_empty_db_list_creation.py  test_get_keys.py  test_multilevel_predicates.py
docs/: xpath_api.md  xpath_api_examples.py
pycoreconf/: __init__.py  database.py  datastore.py  pycoreconf.py  sid.py
samples/basic/: ex1-config.json  example-1.sid  example-1.yang  example-1@unknown.sid  main.py
samples/coreconf-m2m/: ietf-schc@2026-02-24.sid  main.py
samples/datastore/: coreconf-m2m@2026-03-29.sid  coreconf-m2m@2026-03-29.yang  ietf-schc@2026-02-24.sid  ietf-schc@2026-02-24.yang  main.py  schc_test.py
samples/libconf/: ex2-config.json  example-2.sid  example-2@unknown.sid  main.py
samples/multisid/: ietf-schc-oam@2021-11-10.sid  ietf-schc@2023-01-28.sid  main.py
samples/pokemon/: card.json  main.py  model.yang  pokemon@unknown.sid
samples/terraforma/: atmos-41-weather-station@2026-03-02.sid  main.py  schc_test.py  test_data.cbor  test_data_full.json
samples/terraforma_test/: atmos-41-weather-station@2026-03-02.yang  main.py  schc_test.py  test_data.cbor  test_data.json  test_data_full.json
samples/validation/: description.json  example-4-a.sid  example-4-a.yang  example-4-a@unknown.sid  example-data.json  main.py
src/pycoreconf/: __init__.py  datastore.py  model.py  sid.py
tests/: helpers.py  test_create_datastore_api.py  test_create_xpath.py  test_empty_db_list_creation.py  test_get_keys.py  test_multilevel_predicates.py  test_serialization.py
tools/: gen_sid.sh  xml_to_json.sh
