[metadata]
name                              = pycoreconf
version                           = 0.0.2
author                            = Javier A. Fernandez
author_email                      = javier.fddz@gmail.com
description                       = open-source implementation of CORECONF (CoAP Management Interface)
long_description                  = file: README.md
long_description_content_type     = text/markdown
url                               = https://github.com/alex-fddz/pycoreconf
project_urls                      =
    Source Code                   = https://github.com/alex-fddz/pycoreconf
    Bug Tracker                   = https://github.com/alex-fddz/pycoreconf/issues
classifiers                       =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords                          = coreconf, comi, coap

[options]
packages                          = pycoreconf
python_requires                   = >=3.7, <4
install_requires                  =
    cbor2
